fix(library): align instance version to the left

--- a/src/ui/styles/Library.css
+++ b/src/ui/styles/Library.css
@@ -128,3 +128,7 @@
     white-space: nowrap;
 }
 
+.instance-version span {
+    align-items: flex-start;
+}
+
